Fixed footer alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -399,6 +399,10 @@ span {
   line-height: 2.5;
 }
 
+.footer-social a i:first-child {
+  margin-left: 7px;
+}
+
 .hero {
   padding: 1.25rem;
   text-align: center;
